@@ -1,3 +1,7 @@
+2011-11-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/examples/qt/qtdensity.pro: Use QMAKE_LIBS, not QMAKE_LFLAGS
+
 2011-04-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.2.4
